# shadow-weaver

./: compose.yaml  seed.json
controller/: .dockerignore  Cargo.toml  Dockerfile
controller/entity/: Cargo.toml
controller/entity/src/: url.rs
controller/migration/src/: lib.rs  m20230930_094203_create_url_table.rs  m20230930_122301_url_pending.rs  m20230930_135851_url_host.rs  m20230930_143544_url_index.rs
controller/src/: main.rs
spider/: Cargo.toml  Dockerfile
spider/src/: main.rs
tor-client/: Dockerfile  torrc
