[package]
name = "shadow-weaver-controller"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["net", "macros", "rt-multi-thread"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid" ] }
chrono = "0.4.31"
lapin = "2.3.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
futures-util = "0.3.28"
