[package]
name = "shadow-weaver-spider"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.28"
lapin = "2.3.1"
log = "0.4.20"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["socks", "gzip", "brotli", "deflate"] }
select = "0.6.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["net", "macros", "rt-multi-thread"] }
trust-dns-resolver = "0.23.1"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
